@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
 }


class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}



class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}


class EliteEnemy{
    +EliteEnemy(int locationX, int locationY,int speedX, int speedY, int hp)
    +forward():void
    +shoot():List<BaseBullet>
}

class ElitePlusEnemy{
    +ElitePlusEnemy(int locationX, int locationY,int speedX, int speedY, int hp)
    +forward():void
    +shoot():List<BaseBullet>
}

class AceEnemy{
    +AceEnemy(int locationX, int locationY,int speedX, int speedY, int hp)
    +forward():void
    +shoot():List<BaseBullet>
}

class BossEnemy{
    +BossEnemy(int locationX, int locationY,int speedX, int speedY, int hp)
    +forward():void
    +shoot():List<BaseBullet>
}

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

abstract class BaseProp{
    + BaseProp(int locationX, int locationY, int speedX, int speedY)
    + {abstract} active():void
    }

class BloodProp{
    + BloodProp(int locationX, int locationY, int speedX, int speedY)
    + active():void
    }

class FireProp{
    + FireProp(int locationX, int locationY, int speedX, int speedY)
    + active():void
    }

class SuperFireProp{
    + SuperFireProp(int locationX, int locationY, int speedX, int speedY)
    + active():void
}

class FreezeProp{
    + FreezeProp(int locationX, int locationY, int speedX, int speedY)
    + active():void
}

class BombProp{
    + BombProp(int locationX, int locationY, int speedX, int speedY)
    + active():void
}

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- ElitePlusEnemy
AbstractAircraft <|-- AceEnemy
AbstractAircraft <|-- BossEnemy
AbstractAircraft <|-- MobEnemy

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

BaseProp <|-- BloodProp
BaseProp <|-- FireProp
BaseProp <|-- FreezeProp
BaseProp <|-- SuperFireProp
BaseProp <|-- BombProp

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- BaseProp
@enduml